<resources>
    <string name="app_name">Birdsaver</string>
    <string name="navigateToIpAddressView">Ip Address View</string>
    <string name="navigateToDeleteView">Delete View</string>
    <string name="navigateToGpsView">GPS View</string>
    <string name="navigateToRedPixelDetectorView">Red Pixel Detector</string>
    <string name="submit">Submit</string>
    <string name="ip_address">IP Address</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="deleteView">Lösche View</string>
    <string name="location_coordinates">Längengrad: %1$s\nBreitengrad: %2$s</string>
    <string name="navigateToCameraView">Camera View</string>
    <string name="kameraView">Kamera View: </string>
    <string name="coordinates">GPS Koordinaten: </string>
    <string name="date">Datum: </string>
    <string name="instructionHeadline">Anweisungen: </string>
    <string name="startCalibration">Starte Kalibrierung</string>
    <string name="input">IP Adresse und Name eingeben</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="_141_56_131_15">141.56.131.15</string>
    <string name="goOn">Continue</string>
    <string name="simulation">Simulation</string>
    <string name="sim_on_off">Sim On/Off</string>
    <string name="Simulation">Sim On/Off</string>
    <string name="Sim">Simulation</string>
    <string name="selection">... oder wählen Sie ein existierendes Windrad</string>
</resources>