<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- header -->
    <include layout="@layout/fragment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title "Kamera View" -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:text="@string/kameraView"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Windrad"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="63dp"
        android:layout_height="34dp"
        android:layout_marginTop="72dp"
        android:onClick="startButtonClicked"
        android:padding="0dp"
        android:text="@string/start"
        android:backgroundTint="@color/light_green"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <!-- Camera -->
    <ImageView
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/dummy_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Instructions-->
    <TextView
        android:id="@+id/instructionHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:text="@string/instructionHeadline"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/check"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/instruction"
        app:layout_constraintTop_toTopOf="@id/instruction"
        app:layout_constraintBottom_toBottomOf="@id/instruction"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="@drawable/instruction_background"
        android:padding="10dp"
        android:text="Klicken Sie auf den Start Button."
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/instructionHeadline"
        app:layout_constraintTop_toBottomOf="@+id/instructionHeadline" />

    <!-- Calibrate Button -->
    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/light_grey"
        android:insetBottom="0dp"
        android:text="@string/startCalibration"
        android:onClick="continueButtonClicked"
        android:textAlignment="center"
        android:textColor="@color/disabledFont"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction" />

    <TextView
        android:id="@+id/simulationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Sim"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintEnd_toStartOf="@+id/SimOnOff"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/SimOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="12dp"
        app:thumbTint="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <!-- Footer -->
    <include
        android:id="@+id/footer"
        layout="@layout/fragment_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>